--- a/views/album/album-id.ejs
+++ b/views/album/album-id.ejs
@@ -85,7 +85,14 @@
                                               </button>
                                           </form>
                                           <% } %>
-                                        <i class="fa-solid fa-circle-plus"></i>
+                                          <div class="dropdown d-inline">
+                                            <button class="btn btn-secondary dropdown bg-transparent border-0 toblock" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+                                              <i class="fa-solid fa-ellipsis-vertical main-menu"></i>
+                                            </button>
+                                            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+                                              <li><a class="table--sub__menu dropdown-item">Add to queue</a></li>
+                                            </ul>
+                                          </div>
                                     </div>
                                 </td>
                             </tr>
