--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -83,30 +83,30 @@
                                                 </li>
                                             </a>
                                             <% if(currentUser){ %>
-                                            <a href="/favourite" class="choice nav-link align-middle">
+                                            <a href="/favourite" class="choice favourite nav-link align-middle">
                                                 <li>
                                                     <img src="/image/icons/favourite.png" width="25rem">
-                                                    <span class="d-none d-sm-inline">Favourite</span>
+                                                    <span class="d-none d-sm-inline">FAVOURITE</span>
                                                 </li>
                                             </a>
                                             <% } else { %>
-                                                <a href="/login" class="choice nav-link align-middle">
+                                                <a href="/login" class="choice favourite nav-link align-middle">
                                                     <li>
                                                         <img src="/image/icons/favourite.png" width="25rem">
-                                                        <span class="d-none d-sm-inline">Favourite</span>
+                                                        <span class="d-none d-sm-inline">FAVOURITE</span>
                                                     </li>
                                                 </a>
                                             <% } %>
                                             <a class="library">
                                                 Library
                                             </a>
-                                            <a href="/album" class="choice nav-link align-middle">
+                                            <a href="/album" class="choice albums nav-link align-middle">
                                                 <li>
                                                     <img src="/image/icons/album.png" width="25rem">
                                                     <span class="d-none d-sm-inline">ALBUMS</span>
                                                 </li>
                                             </a>
-                                            <a href="/artist" class="choice nav-link align-middle">
+                                            <a href="/artist" class="choice artist nav-link align-middle">
                                                 <li>
                                                     <img src="/image/icons/artist.png" width="25rem">
                                                     <span class="d-none d-sm-inline">ARTISTS</span>
