--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -77,7 +77,8 @@
                             <div class="card-body scrolluser">
                                 <div class="row gutters">
                                     <div class="col-xl-12 col-lg-6 col-md-12 col-sm-12 col-12">
-                                        <h3 class="mb-2 text-white">Favourite Songs</h3>
+                                        <h3 class="mb-2 text-white d-inline">Favourite Songs</h3>
+                                        <a href="/favourite" class="float-end mt-2 fav-page">Favourite page --></a>
                                         <hr>
                                     </div>
                                 </div>
